fixed warnings (nothing serious)
Former-commit-id: 99f7afad8ae7852b285ed88e11003a71c5d2bb7a